added video link

--- a/index.html
+++ b/index.html
@@ -27,17 +27,23 @@
     
     </header>
     <main>
-      <section class="bg-img" id="first">
-        <h2>Power Chord</h2>
-      </section>
-      <section class="information"> <p><b>Passive</b></p>
-            <article>
-               <div class="paragraph-container">
-                  <p>
-                    Accelerando: Sona gains non-Ultimate ability haste permanently for her basic abilities as she uses her abilities well, up to a cap. Beyond that cap, further successful uses reduce her ultimate's remaining cooldown instead. Power Chord: Every few spell casts, Sona's next attack will deal bonus magic damage in addition to an additional effect based on what basic Ability Sona last activated.
-                  </p>
-               </div>
-            </article></section>
+    <section class="bg-img" id="first">
+    <h2>Power Chord</h2>
+</section>
+<section class="information">
+    <p><b>Passive</b></p>
+    <article>
+        <div class="paragraph-container">
+            <p>
+                Accelerando: Sona gains non-Ultimate ability haste permanently for her basic abilities as she uses her abilities well, up to a cap. Beyond that cap, further successful uses reduce her ultimate's remaining cooldown instead. Power Chord: Every few spell casts, Sona's next attack will deal bonus magic damage in addition to an additional effect based on what basic Ability Sona last activated.
+            </p>
+        </div>
+        <div class="video-link">
+            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+        </div>
+    </article>
+</section>
+
 
       <section class="bg-img" id="second">
         <h3>Hymn of Valor</h3>
