--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                </div>
 
                <div class="video-link">
-            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+            <a href="./assets/Q.mp4" target="_blank">Click here to watch the ability in action</a>
         </div>
             </article></section>
 
@@ -74,7 +74,7 @@
         </div>
 
         <div class="video-link">
-            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+            <a href="./assets/SonaW.mp4" target="_blank">Click here to watch the ability in action</a>
         </div>
     </article>
 </section>
@@ -90,7 +90,7 @@
                </div>
 
                <div class="video-link">
-            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+            <a href="./assets/SonaE.mp4" target="_blank">Click here to watch the ability in action</a>
         </div>
             </article>
       </section>
@@ -105,7 +105,7 @@
                </div>
 
                <div class="video-link">
-            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+            <a href="./assets/R.mp4" target="_blank">Click here to watch the ability in action</a>
         </div>
             </article>
       </section>
