--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </p>
         </div>
         <div class="video-link">
-            <a href="./assets/Passive.mp4" target="_blank">Click here to watch the ability in action</a>
+            <video loop muted autoplay src="./assets/Passive.mp4"></video>
+            
         </div>
     </article>
 </section>
@@ -52,12 +53,13 @@
       
        <article>
                <div class="paragraph-container">
+
                   <p>Sona plays the Hymn of Valor, sends out bolts of sound, dealing magic damage to two nearby enemies, prioritizing champions and monsters. Sona gains a temporary aura that grants allies tagged by the zone bonus damage on their next attack against enemies.
                   </p>
                </div>
 
                <div class="video-link">
-            <a href="./assets/Q.mp4" target="_blank">Click here to watch the ability in action</a>
+            <video loop muted autoplay src="./assets/Q.mp4"></video>
         </div>
             </article></section>
 
@@ -74,7 +76,7 @@
         </div>
 
         <div class="video-link">
-            <a href="./assets/SonaW.mp4" target="_blank">Click here to watch the ability in action</a>
+            <video loop muted autoplay src="./assets/SonaW.mp4"></video>
         </div>
     </article>
 </section>
@@ -90,7 +92,7 @@
                </div>
 
                <div class="video-link">
-            <a href="./assets/SonaE.mp4" target="_blank">Click here to watch the ability in action</a>
+            <video loop muted autoplay src="./assets/SonaE.mp4"></video>
         </div>
             </article>
       </section>
@@ -105,7 +107,7 @@
                </div>
 
                <div class="video-link">
-            <a href="./assets/R.mp4" target="_blank">Click here to watch the ability in action</a>
+            <video loop muted autoplay src="./assets/R.mp4"></video>
         </div>
             </article>
       </section>
