--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <header id="top">
       <nav>
         <h1><a href="#first">Sona - Maven of the Strings</a></h1>
+
+         <form action="" method="get">
+            <select name="page" onchange="window.location.href=this.value;">
+                <option value="">Select a Champion</option>
+                <option value="page1.html">Page 1</option>
+                <option value="page2.html">Page 2</option>
+                <option value="page3.html">Page 3</option>
+            </select>
+        </form>
+
         <ul>
           <li><a href="#first">Passive</a></li>
           <li><a href="#second">Q</a></li>
