updated page 1 ( lux )

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <form action="" method="get">
             <select name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
-                <option value="page1.html">Page 1</option>
+                <option value="page1.html">Lux</option>
                 <option value="page2.html">Page 2</option>
                 <option value="page3.html">Page 3</option>
             </select>
