--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <select name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
                 <option value="page1.html">Lux</option>
-                <option value="page2.html">Page 2</option>
+                <option value="page2.html">Seraphine</option>
                 <option value="page3.html">Page 3</option>
             </select>
         </form>
