upated page 3 with Rell

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <option value="">Select a Champion</option>
                 <option value="page1.html">Lux</option>
                 <option value="page2.html">Seraphine</option>
-                <option value="page3.html">Page 3</option>
+                <option value="page3.html">Rell</option>
             </select>
         </form>
 
