--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1><a href="#first">Sona - Maven of the Strings</a></h1>
 
          <form action="" method="get">
-            <select name="page" onchange="window.location.href=this.value;">
+            <select class="dropdown" name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
                 <option value="page1.html">Lux</option>
                 <option value="page2.html">Seraphine</option>
