added dropdown-form class in html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <h1><a href="#first">Sona - Maven of the Strings</a></h1>
 
-         <form action="" method="get">
+         <form class="dropdown-form" action="" method="get">
             <select class="dropdown" name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
                 <option value="page1.html">Lux</option>
