--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
          <form class="dropdown-form" action="" method="get">
             <select class="dropdown" name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
-                <option value="page1.html">Lux</option>
-                <option value="page2.html">Seraphine</option>
-                <option value="page3.html">Rell</option>
+                <option value="../lux.html">Lux</option>
+                <option value="seraphine.html">Seraphine</option>
+                <option value="yuumi.html">Yuumi</option>
             </select>
         </form>
 
