--- a/lux.html
+++ b/lux.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lux</title>
 </head>
 <body>
     
      <header id="top">
       <nav>
-        <h1><a href="#first">Sona - Maven of the Strings</a></h1>
+        <h1><a href="#first">Lux - The Lady Of Luminosity</a></h1>
 
          <form class="dropdown-form" action="" method="get">
             <select class="dropdown" name="page" onchange="window.location.href=this.value;">
