--- a/lux.html
+++ b/lux.html
@@ -29,5 +29,102 @@
           <li><a href="#fifth">R</a></li>
         </ul>
       </nav>
+
+         <main>
+      <section class="bg-img" id="first">
+        <h2>Illumination</h2>
+      </section>
+      <section class="information">
+        <article>
+          <div class="paragraph-container">
+            <h3>Passive Ability</h3>
+            <p>
+              Lux's damaging spells charge the target with energy for a few seconds. Lux's next attack ignites the energy, dealing bonus magic damage (depending on Lux's level) to the target.
+            </p>
+          </div>
+          <div class="video-link">
+            <video loop muted autoplay src="./lux/lux-passive.mp4"></video>
+          </div>
+        </article>
+      </section>
+
+      <section class="bg-img" id="second">
+        <h2>Hymn of Valor</h2>
+      </section>
+      <section class="information">
+        <article>
+          <div class="paragraph-container">
+            <h3>Q Ability</h3>
+            <p>
+              Sona plays the Hymn of Valor, sends out bolts of sound, dealing
+              magic damage to two nearby enemies, prioritizing champions and
+              monsters. Sona gains a temporary aura that grants allies tagged by
+              the zone bonus damage on their next attack against enemies.
+            </p>
+          </div>
+
+          <div class="video-link">
+            <video loop muted autoplay src="./assets/Q.mp4"></video>
+          </div>
+        </article>
+      </section>
+
+      <section class="bg-img" id="third">
+        <h2>Aria of Perseverance</h2>
+      </section>
+      <section class="information">
+        <article>
+          <div class="paragraph-container">
+            <h3>W Ability</h3>
+            <p>
+              Sona plays the Aria of Perseverance, sending out protective
+              melodies, healing Sona and a nearby wounded ally. Sona gains a
+              temporary aura that grants allies tagged by the zone a temporary
+              shield.
+            </p>
+          </div>
+
+          <div class="video-link">
+            <video loop muted autoplay src="./assets/SonaW.mp4"></video>
+          </div>
+        </article>
+      </section>
+
+      <section class="bg-img" id="fourth"><h2>Song of Celerity</h2></section>
+      <section class="information">
+        <article>
+          <div class="paragraph-container">
+            <h3>E Ability</h3>
+            <p>
+              Sona plays the Song of Celerity, granting nearby allies bonus Move
+              Speed. Sona gains a temporary aura that grants allied champions
+              tagged by the zone bonus Move Speed.
+            </p>
+          </div>
+
+          <div class="video-link">
+            <video loop muted autoplay src="./assets/SonaE.mp4"></video>
+          </div>
+        </article>
+      </section>
+
+      <section class="bg-img" id="fifth"><h2>Crescendo</h2></section>
+      <section class="information">
+        <article>
+          <div class="paragraph-container">
+            <h3>R Ability</h3>
+            <p>
+              Sona plays her ultimate chord, stunning enemy champions and
+              forcing them to dance and dealing magic damage to them. Each rank
+              reduces the base cooldown of Sona's basic abilities.
+            </p>
+          </div>
+
+          <div class="video-link">
+            <video loop muted autoplay src="./assets/R.mp4"></video>
+          </div>
+        </article>
+      </section>
+    </main>
 </body>
 </html>
