edited lux html

--- a/lux.html
+++ b/lux.html
@@ -49,17 +49,15 @@
       </section>
 
       <section class="bg-img" id="second">
-        <h2>Hymn of Valor</h2>
+        <h2>Light Binding</h2>
       </section>
       <section class="information">
         <article>
           <div class="paragraph-container">
             <h3>Q Ability</h3>
             <p>
-              Sona plays the Hymn of Valor, sends out bolts of sound, dealing
-              magic damage to two nearby enemies, prioritizing champions and
-              monsters. Sona gains a temporary aura that grants allies tagged by
-              the zone bonus damage on their next attack against enemies.
+              Lux releases a sphere of light that binds and deals damage to up to two enemy units.
+
             </p>
           </div>
 
@@ -70,17 +68,15 @@
       </section>
 
       <section class="bg-img" id="third">
-        <h2>Aria of Perseverance</h2>
+        <h2>Prismatic Barrier
+</h2>
       </section>
       <section class="information">
         <article>
           <div class="paragraph-container">
             <h3>W Ability</h3>
             <p>
-              Sona plays the Aria of Perseverance, sending out protective
-              melodies, healing Sona and a nearby wounded ally. Sona gains a
-              temporary aura that grants allies tagged by the zone a temporary
-              shield.
+              Lux throws her wand and bends the light around any friendly target it touches, protecting them from enemy damage
             </p>
           </div>
 
@@ -90,15 +86,14 @@
         </article>
       </section>
 
-      <section class="bg-img" id="fourth"><h2>Song of Celerity</h2></section>
+      <section class="bg-img" id="fourth"><h2>Lucent Singularity
+</h2></section>
       <section class="information">
         <article>
           <div class="paragraph-container">
             <h3>E Ability</h3>
             <p>
-              Sona plays the Song of Celerity, granting nearby allies bonus Move
-              Speed. Sona gains a temporary aura that grants allied champions
-              tagged by the zone bonus Move Speed.
+              Fires an anomaly of twisted light to an area, which slows nearby enemies. Lux can detonate it to damage enemies in the area of effect.
             </p>
           </div>
 
@@ -108,15 +103,14 @@
         </article>
       </section>
 
-      <section class="bg-img" id="fifth"><h2>Crescendo</h2></section>
+      <section class="bg-img" id="fifth"><h2>Final Spark
+</h2></section>
       <section class="information">
         <article>
           <div class="paragraph-container">
             <h3>R Ability</h3>
             <p>
-              Sona plays her ultimate chord, stunning enemy champions and
-              forcing them to dance and dealing magic damage to them. Each rank
-              reduces the base cooldown of Sona's basic abilities.
+              After gathering energy, Lux fires a beam of light that deals damage to all targets in the area. In addition, triggers Lux's passive ability and refreshes the Illumination debuff duration.
             </p>
           </div>
 
