updated lux html q video

--- a/lux.html
+++ b/lux.html
@@ -62,7 +62,7 @@
           </div>
 
           <div class="video-link">
-            <video loop muted autoplay src="./assets/Q.mp4"></video>
+            <video loop muted autoplay src="./lux/lux-q.mp4"></video>
           </div>
         </article>
       </section>
