updated lux html with w video

--- a/lux.html
+++ b/lux.html
@@ -81,7 +81,7 @@
           </div>
 
           <div class="video-link">
-            <video loop muted autoplay src="./assets/SonaW.mp4"></video>
+            <video loop muted autoplay src="./lux/lux-w.mp4"></video>
           </div>
         </article>
       </section>
