--- a/lux.html
+++ b/lux.html
@@ -98,7 +98,7 @@
           </div>
 
           <div class="video-link">
-            <video loop muted autoplay src="./assets/SonaE.mp4"></video>
+            <video loop muted autoplay src="./lux/lux-e.mp4"></video>
           </div>
         </article>
       </section>
