--- a/lux.html
+++ b/lux.html
@@ -115,7 +115,7 @@
           </div>
 
           <div class="video-link">
-            <video loop muted autoplay src="./assets/R.mp4"></video>
+            <video loop muted autoplay src="./lux/lux-r.mp4"></video>
           </div>
         </article>
       </section>
