updated lux html

--- a/lux.html
+++ b/lux.html
@@ -17,7 +17,7 @@
                 <option value="">Select a Champion</option>
                 <option value="../index.html">Sona</option>
                 <option value="page2.html">Seraphine</option>
-                <option value="page3.html">Rell</option>
+                <option value="page3.html">Yuumi</option>
             </select>
         </form>
 
