--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <form class="dropdown-form" action="" method="get">
             <select class="dropdown" name="page" onchange="window.location.href=this.value;">
                 <option value="">Select a Champion</option>
-                <option value="../lux.html">Lux</option>
+                <option value="lux.html">Lux</option>
                 <option value="seraphine.html">Seraphine</option>
                 <option value="yuumi.html">Yuumi</option>
             </select>
